FIX + FEAT - clean code + add historic and overflowFIX

--- a/public/assets/css/style_custom.css
+++ b/public/assets/css/style_custom.css
@@ -34,5 +34,7 @@ nav a:hover{
 }
 
 .gobalContainer{
-     height: 30em;
+    height: 30em;
+
+    overflow: scroll;
  }
